[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Ross Weir"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all", "cli"] }
# So we don't have to bother with compilied sqlite libs, particularly on windows where it's not convienient
# version is the same as the one used by the `diesel_cli` crate
libsqlite3-sys = { version = ">=0.8.0, <0.24.0", features = ["min_sqlite_version_3_7_16", "bundled"] }
diesel = { version = "1.4.8", features = ["sqlite", "chrono"] }
diesel_migrations = "1.4.0"
chrono = { version = "0.4.19", features = ["serde"] }
anyhow = "1.0.51"
thiserror = "1.0.30"
reqwest = "0.11.9"
rand = "0.8.5"
sha2 = { version = "0.9.2", default-features = false }
hex = "0.4.2"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
