[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Ross Weir"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.6", features = ["api-all"] }
chrono = { version = "0.4.19", features = ["serde"] }
anyhow = "1.0.51"
thiserror = "1.0.30"
reqwest = "0.11.9"
rand = "0.8.5"
sha2 = { version = "0.9.2", default-features = false }
hex = "0.4.2"

[dependencies.tauri-plugin-log]
git = "https://github.com/tauri-apps/tauri-plugin-log#v0.1.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
